final changes done

--- a/style.css
+++ b/style.css
@@ -37,3 +37,10 @@ form{
     border-radius:  10px;
     background-color: rgb(219,135,186);
 }
+
+.g.recaptcha{
+
+    margin-top: 16px;
+    display: flex;
+    justify-content: center;
+}
